--- a/src/assets/scss/button.scss
+++ b/src/assets/scss/button.scss
@@ -27,7 +27,7 @@
   font-weight: bold;
   cursor: pointer;
   color: $white;
-  background: $black1;
+  background: $black;
   width: 12rem;
   height: 3rem;
   margin: 1rem 0;
