--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,11 +1,10 @@
-$bitcoin: #ffae34;
-$ninja: #222222;
-$blockchain: #8b58f9;
-$evil: #f33355;
+$yellow: #ffae34;
+$black: #222222;
+$purple: #8b58f9;
+$red: #f33355;
 $default: #d0d0d0;
 $h1: #222222;
 $black2: rgba(0, 0, 0, 0.8);
-$black1: #222222;
 $span: rgba(34, 34, 34, 0.6);
 $white: white;
 
